# simpleopt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  ProjectHome.md  README.md  SimpleGlob.h  SimpleOpt.dsw  SimpleOpt.h  SimpleOpt.sln  basicSample.cpp  fullSample.cpp  globSample.cpp  package.cmd  premake4.lua  runtests.cmd  runtests.sh  runtests.txt  runtests.ux.txt  simpleopt.doxy  testfull.bat
2.8/: SimpleOpt.h  fullSample.cpp  runtests.txt
examples/: Makefile  basicSample.dsp  basicSample.vcproj  fullSample.dsp  fullSample.vcproj  globSample.dsp  globSample.vcproj  runtests.cmd  runtests.ux.txt
releases/3.0/: runtests.sh
releases/3.1/: SimpleGlob.h
tags/3.0/: fullSample.cpp  globSample.cpp  runtests.ux.txt
tags/3.1/: runtests.win.txt
tags/3.2/: SimpleOpt.h  fullSample.cpp  runtests.cmd  runtests.sh
tags/3.4/: SimpleGlob.h  basicSample.cpp  package.cmd  runtests.cmd
tags/3.5/: SimpleGlob.h  fullSample.cpp  runtests.sh  runtests.win.txt
trunk/: SimpleGlob.h  SimpleOpt.h  fullSample.cpp  globSample.cpp  package.cmd  runtests.win.txt
